spacing fixed?

--- a/style.css
+++ b/style.css
@@ -222,10 +222,17 @@ nav .navlinks li a{
   border-color: #AA142D;
 }
 .btn.secondary-btn {
-  border-color: #AA142D;
   background-color: #f2f2f2;
   color: #111;
+  padding: 12px 25px;
+  margin: 5px 0px;
+  margin-right:7px;
+  border-radius: 30px;
+  border:2px solid #AA142D;
+  box-shadow:  0 10px 10px -8px rgb(0 0 0 / 78%);
+
   cursor: pointer;
+  
 }
 
 
